FlightPath 5.x Changelog
========================

2018-05-05
  Made the function Course::load_course_from_data_string_for_requirement_clone() set the course's display_status to "ellible"
  to match the behavior of the default constructor.  Re: issue #2317, thanks to Logan Buth.


2018-04-29
  Made "change term" link in the currently advising box nicer, with more CSS selectors available.
  

2018-04-26
  Small change in system.module, to make theme selection easier (radio buttons instead of having to type in location)


2018-04-22
  Fixed issue #2316 (special thanks to Logan Buth) in which outdated subs aren't always detected in cases
  of combined degrees.
  

2018-04-21
  Fixed small bug where sometimes "courses added by advisor" result in a mysql error while advising, due to
  the "degree_id" being blank and not "0".

 
2018-04-16
  Fixed bug in AdvisingScreen introduced by a previous commit, where I left off a line of code after rolling
  back changes.
  
  Restored a line of code I accidentally deleted in a previous commit, in _FlightPath.php.


2018-04-14   
  Rolled back a modification made to AdvisingScreen, as described in ticket 2291, comment #36, and implemented
  new changes from comment #42 (special thanks to Logan Buth).  This was to deal with a subtle bug involving a
  repeated course, where one of the attempts was substituted, the other not.

  Re: ticket #2311, added array of group id's to the form_state, when a year of degree data is being duplicated.
  
  Re: ticket #2312, fixed a bug where sometimes a group popup doesn't show the same branch as what the View screen
  does.  Special thanks to Logan Buth for discovering this issue and proposing the fix.
  
  Re: ticket #2294, fixed a bug where var hour courses were being advised for zero hours.  To fix this, had to add
  a new bit of javascript to advise.js, as well as a new hidden variable per course in _AdvisingScreen's draw_popup_group_course_row()
  

2018-04-11